crates/ars-components/src/date_time/date_field/snapshots/ars_components__date_time__date_field__tests__description.snap
---
source: crates/ars-components/src/date_time/date_field/tests.rs
expression: snapshot_attrs(&api.description_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "description",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-field",
            ),
        ),
        (
            Id,
            String(
                "birthday-description",
            ),
        ),
    ],
    styles: [],
}
