crates/ars-components/src/date_time/date_field/snapshots/ars_components__date_time__date_field__tests__hidden_input_empty.snap
---
source: crates/ars-components/src/date_time/date_field/tests.rs
expression: snapshot_attrs(&api.hidden_input_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "hidden-input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-field",
            ),
        ),
        (
            Type,
            String(
                "hidden",
            ),
        ),
        (
            Value,
            String(
                "",
            ),
        ),
    ],
    styles: [],
}
