crates/ars-components/src/date_time/date_field/snapshots/ars_components__date_time__date_field__tests__label.snap
---
source: crates/ars-components/src/date_time/date_field/tests.rs
expression: snapshot_attrs(&api.label_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-field",
            ),
        ),
        (
            Id,
            String(
                "birthday-label",
            ),
        ),
    ],
    styles: [],
}
