crates/ars-components/src/date_time/date_field/snapshots/ars_components__date_time__date_field__tests__root_idle.snap
---
source: crates/ars-components/src/date_time/date_field/tests.rs
expression: snapshot_attrs(&api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-field",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "idle",
            ),
        ),
        (
            Id,
            String(
                "birthday",
            ),
        ),
    ],
    styles: [],
}
